# subscription_helper

./: Cargo.toml  全部订阅地址.json  订阅地址.json
Xray/ip_Update/: ip_1.bat  ip_2.bat  ip_3.bat  ip_4.bat
clash.meta/ip_Update/: ip_1.bat  ip_2.bat  ip_3.bat  ip_4.bat  ip_5.bat  ip_6.bat
hysteria/ip_Update/: ip_1.bat  ip_2.bat  ip_3.bat  ip_4.bat
hysteria2/ip_Update/: ip_1.bat  ip_2.bat  ip_3.bat  ip_4.bat
juicity/ip_Update/: ip_1.bat  ip_2.bat
mieru/ip_Update/: ip_1.bat  ip_2.bat
naiveproxy/ip_Update/: ip_1.bat  ip_2.bat
singbox/ip_Update/: ip_1.bat  ip_2.bat
src/: main.rs
test/: 01_extract_urls.rs  02_extract_unique_urls.rs
