[package]
name = "subscription_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1"
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
hashbrown = "0.14.5"

# [[bin]]
# name = "test1"
# path = "test/01_extract_urls.rs"

# [[bin]]
# name = "test2"
# path = "test/02_extract_unique_urls.rs"

# [[bin]]
# name = "main"
# path = "src/main.rs"
